# cas13_finetuning_pipeline

./: .gitignore  README.md  pyproject.toml  requirements-nscc-cu121.txt  setup.cfg
configs/: oracle_cas13.yaml  rl_cas13_debug_mac.yaml  rl_cas13_nscc.yaml  rl_cas13_nscc_smoke.yaml  rl_cas13_sft_best_esmfold.yaml  rl_cas13_sft_best_esmfold_smoke.yaml  rl_cas13_sft_best_mock_smoke.yaml  rl_ppo.yaml  rl_ppo_real_smoke.yaml  sft.yaml  sft_a100_cas13_raw_2epoch.yaml  sft_a100_keyword_all_lengths.yaml  sft_a100_keyword_all_lengths_smoke.yaml  sft_cas13_11000_2epoch.yaml  sft_formal.yaml  sft_formal_mps_safe.yaml  sft_full_length_a100.yaml  sft_smoke.yaml
docs/: oracle_design.md  rl_cuda_setup.md
scripts/: 00_download_assets.py  01_inspect_atlas_schema.py  02_extract_cas13_from_atlas.py  02_rl_debug_mac.py  02b_extract_cas13_keyword_all_lengths.py  03_make_splits.py  04_train_sft.py  05_eval_sft.py  06_generate_sft_samples.py  07_audit_sft_lengths_and_eos.py  08_score_candidates_oracle.py  10_generate_policy_samples.py  10_run_rl_nscc.sh  11_run_esmfold_batch_nscc.sh  11_score_oracles.py  12_probe_progen3_likelihood.py  12_train_rl_ppo.py  13_eval_rl_samples.py  13_summarize_reward_breakdown.py  14_launch_tensorboard.py  14_nscc_preflight.py  15_calibrate_reward_thresholds.py  16_download_or_check_progen3.py  17_probe_reward_composer.py  18_probe_esmfold_import.py  19_esmfold_batch_oracle.py  extract_cas13_11000_no_dedup.py  extract_cas9_from_atlas.py  nscc_a100_cas13_raw_2epoch.pbs  nscc_a100_keyword_all_lengths_2epoch.pbs  nscc_a100_keyword_all_lengths_smoke.pbs  nscc_one_click_prepare_and_submit.sh  nscc_sft_full_length_a100.slurm  plot_sft_curves.py  smoke_test_extract_cas9.py
slurm/: rl_cas13_a100.sbatch
tests/: test_cache.py  test_cas13_rules.py  test_cascade_oracle_adapter.py  test_checkpoint_resume.py  test_esmfold_schema.py  test_invalid_sequence_gate.py  test_modifications_validation.py  test_oracle_cache.py  test_oracle_filters.py  test_oracle_mock_scorers.py  test_oracle_reward.py  test_oracle_schema.py  test_progen3_preflight.py  test_progen3_probe.py  test_progen3_schema.py  test_real_oracle_imports.py  test_real_ppo_smoke.py  test_reward.py  test_reward_breakdown_fields.py  test_reward_composer_probe.py  test_reward_geomean.py  test_reward_transforms.py  (+3 more)
(+32 files in other folders)
