[metadata]
name = cas13-ft-pipeline
version = 0.1.0
description = Cas13 SFT and RL PPO training pipelines

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    torch
    transformers
    pyyaml
    tqdm
    pandas
    numpy
    tensorboard
    accelerate>=0.26.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
rl =
    trl
esmfold =
    fair-esm
